--- a/action.yml
+++ b/action.yml
@@ -75,6 +75,10 @@ inputs:
     description: |
       Provide environment variables to the build step.
     required: false
+  ENV:
+    description: |
+      Provide environment variables that will be available at runtime.
+    required: false
   WORKING_DIRECTORY:
     description: |
       Working directory for the Vercel CLI.
