--- a/action.yml
+++ b/action.yml
@@ -1,6 +1,6 @@
-name: 'Deploy to Vercel Action'
-description: 'Deploy your project to Vercel using GitHub Actions. Supports PR previews and GitHub deployments.'
-author: 'BetaHuhn'
+name: 'Deploy to Vercel Action (updated)'
+description: 'Deploy to Vercel using GitHub Actions. Supports PR previews and GitHub deployments. Forked from BetaHuhn’s abandoned action.'
+author: 'aldenquimby'
 
 inputs:
   GITHUB_TOKEN:
